--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "wf3/swap",
+    "authors": [],
+    "description": "",
     "type": "project",
     "license": "proprietary",
     "require": {
@@ -31,6 +34,7 @@
         "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.9",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "*",
