--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.14",
